<resources>
    <string name="app_name">MATEMATRIKS</string>
    <string name="hi_developer">Hi Dan!</string>
    <string name="title_profile">Profile</string>
    <string name="motivation_100">Tingkatkan terus Nilainya :)</string>
    <string name="motivation_80">Kamu Sudah mencapai nilai minimal, Tingkatkan</string>
    <string name="motivation_60">Kamu hampir mencapai nilai minimal, coba terus!</string>
    <string name="motivation_0">Kamu kurang teliti, Tetap coba lagi jangan putus asa!</string>
    <string name="version">Version</string>
    <string name="intro_label">Introduction</string>
    <string name="fork_on_github">Fork on GitHub</string>
    <string name="licenses">Licenses</string>
    <string name="app_name_subtitle">Belajar jadi lebih mudah</string>
    <string name="next">Selanjutnya</string>
    <string name="skip">Lewati</string>
    <string name="start">Mengerti!</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="belajar">Belajar</string>
    <string name="latihan">Latihan</string>
    <string name="description_menu_belajar_header">
        Matriks dalam matematika merupakan kumpulan bilangan, simbol atau ekspresi berbentuk persegi panjang yang disusun menurut baris dan kolom. Bilangan-bilangan yang terdapat pada suatu matriks disebut dengan elemen atau disebut juga anggota dari suatu matriks.\n
    </string>
    <string name="slide_1_title">MATEMATRIKS</string>
    <string name="slide_1_desc">Aplikasi pembelajaran Matematika materi Matriks yang dikemas dalam versi Android Mobile</string>
    <string name="slide_2_title">Tanpa Buku</string>
    <string name="slide_2_desc">Aplikasi ini dapat menggantikan isi yang ada di tas yang seharusnya Buku menjadi Smartphone!</string>
    <string name="slide_3_title">Materi yang terpisah</string>
    <string name="slide_3_desc">Materi Matrik yang terpisah untuk mempermudah Anda belajar Matriks</string>
    <string name="slide_4_title">Kemampuan Anda</string>
    <string name="slide_4_desc">Aplikasi ini mampu membantu melihat perkembangan kemampuan Anda ketika anda melakukan test</string>
    <string name="play_again">Play Again</string>
    <string name="matematriks">MATEMATRIKS</string>
    <string name="ordo_2x2">ORDO 2x2</string>
    <string name="b11">B11</string>
    <string name="b12">B12</string>
    <string name="canceled">CANCELED</string>
    <string name="ordo_2_x_2">ORDO 2 x 2</string>
    <string name="description_matriks_1">
        Fyi :\n\nMatriks adalah sekumpulan bilangan yang disusun secara baris dan kolom dan ditempatkan pada kurung biasa atau kurung siku. Ordo suatu matriks adalah bilangan yang menunjukkan banyaknya baris (m) dan banyaknya kolom (n).
    </string>
    <string name="description_determinan_1">
        Fyi :\n\n
        - Determinan adalah suatu bilangan real yang diperoleh dari suatu proses dengan aturan tertentu terhadap matriks persegi. \n\n
        - Determinan dinyatakan sebagai jumlah semua hasil kali dasar bertanda dari matriks bujur sangkar A. \n\n
        - Determinan dari sebuah matriks bujur sangkar A, dinotasikan dengan det(A), atau |A|
    </string>
    <string name="description_minor_1">
        Fyi :\n\n- Minor biasanya dilambangkan dengan Mab , dengan "M" adalah minor "a", adalah baris, dan "b" adalah kolom.\n\nMaka minor adalah suatu elemen yang yang didefinisikan sebagai determinan submatrik yang tinggal setelah baris ke-a dan setelah kolom ke-b
    </string>
    <string name="proses">PROSES</string>
    <string name="slide_belajar_matriks_1_title">MATRIKS ?</string>
    <string name="slide_belajar_matriks_1_desc">
        Matriks adalah susunan sekelompok bilangan dalam suatu jajaran berbentuk persegi panjang yang diatur berdasarkan baris dan kolom dan diletakkan antara dua tanda kurung.
    </string>
    <string name="slide_belajar_matriks_2_title">Tanda MATRIKS</string>
    <string name="slide_belajar_matriks_2_desc">
        Tanda kurung yang digunakan untuk mengapit susunan anggota matriks tersebut dapat berupa tanda kurung biasa atau tanda kurung siku. Setiap bilangan pada matriks disebut elemen (unsur) matriks.
    </string>
    <string name="slide_belajar_matriks_3_title">Elemen MATRIKS</string>
    <string name="slide_belajar_matriks_3_desc">
        Kumpulan elemen yang tersusun secara horizontal disebut baris, sedangkan kumpulan elemen yang tersusun secara vertikal disebut kolom. Suatu matriks yang memiliki m baris dan n kolom disebut matriks m x n dan disebut sebagai matriks yang memiliki orde m x n. Penulisan matriks menggunakan huruf kapital dan tebal.
    </string>
    <string name="slide_belajar_ordo_matriks_1_title">Ordo MATRIKS ?</string>
    <string name="slide_belajar_ordo_matriks_1_desc">
        Ordo suatu matriks adalah bilangan yang menunjukkan banyaknya baris (m) dan banyaknya kolom (n).
    </string>
    <string name="slide_belajar_ordo_matriks_2_title">Ordo</string>
    <string name="slide_belajar_ordo_matriks_2_desc">
        Ordo matriks merupakan bilangan asli yang menyatakan banyaknya baris dan kolom dari matriks tersebut. Seperti matriks A memiliki m baris dan n kolom, dapat dinyatakan sebagai matriks A berordo m x n. Untuk m = n, dapat dinyatakan sebagai matriks A berordo n.
    </string>
    <string name="slide_belajar_jenis_matriks_1_title">Jenis MATRIKS ?</string>
    <string name="slide_belajar_jenis_matriks_1_desc">
        Matriks terbagi menjadi beberapa jenis, yaitu matriks persegi, matriks kolom, matriks baris, matriks transpose, matriks diagonal, matriks segitiga atas dan bawah, matriks nol, matriks simetri, dan matriks identitas.
    </string>
    <string name="slide_belajar_jenis_matriks_2_title">Matriks Persegi</string>
    <string name="slide_belajar_jenis_matriks_2_desc">
        Matriks persegi adalah matriks yang mempunyai banyak baris dan banyak kolom yang sama. Secara umum, matriks persegi berordo n x n.
    </string>
    <string name="slide_belajar_jenis_matriks_3_title">Matriks Kolom</string>
    <string name="slide_belajar_jenis_matriks_3_desc">
        Matriks kolom adalah matriks yang hanya mempunyai satu kolom. Secara umum, matriks kolom berordo m x 1.
    </string>
    <string name="slide_belajar_jenis_matriks_4_title">Matriks Baris</string>
    <string name="slide_belajar_jenis_matriks_4_desc">
        Matriks baris adalah matriks yang hanya mempunyai satu baris. Secara umum, matriks baris berordo 1 x n.
    </string>
    <string name="slide_belajar_jenis_matriks_5_title">Matriks Transpose</string>
    <string name="slide_belajar_jenis_matriks_5_desc">
        Matriks transpose Am x n yang selanjutnya dinotasikan dengan A’ adalah matriks berordo n x m dengan baris-barisnya adalah kolom-kolom matriks Am x n.
    </string>
    <string name="slide_belajar_transpos_1_title">Transpose MATRIKS ?</string>
    <string name="slide_belajar_transpos_1_desc">
        Transpose Matriks yaitu suatu matriks yang dilakukan pertukaran antara dimensi kolom dan barisnya. Definisi lain dari transpose matriks adalah sebuah matriks yang didapatkan dengan cara memindahkan elemen - elemen pada kolom menjadi elemen baris dan sebaliknya.
    </string>
    <string name="slide_belajar_transpos_2_title">Contoh, matriks A</string>
    <string name="slide_belajar_transpos_2_desc">
        A dan B adalah Baris\n
        C dan D adalah Kolom
    </string>
    <string name="slide_belajar_transpos_3_title">Maka Transpose A</string>
    <string name="slide_belajar_transpos_3_desc">
        A dan B berpindah ruas menjadi Kolom\n
        dan C dan D berpindah ruas menjadi Baris
    </string>
    <string name="slide_belajar_kesamaan_matriks_1_title">Kesamaan MATRIKS ?</string>
    <string name="slide_belajar_kesamaan_matriks_1_desc">
        Dua matriks dikatakan sama jika dua matriks tersebut memiliki ordo yang sama dan elemen-elemen matriks yang bersesuaian sama. Apabila disimbolkan, A = B jika aij = bij untuk setiap i dan j.
    </string>
    <string name="slide_belajar_kesamaan_matriks_2_title">Menentukan Apakah Dua Matriks Sama</string>
    <string name="slide_belajar_kesamaan_matriks_2_desc">
        Tentukan apakah pernyataan-pernyataan berikut benar, salah, atau kondisional. Jika salah, jelaskan. Jika kondisional, temukan nilai yang membuat pernyataan tersebut benar.
    </string>
    <string name="slide_belajar_kesamaan_matriks_3_title">Point A</string>
    <string name="slide_belajar_kesamaan_matriks_3_desc">
        Pernyataan pada poin A adalah salah. Matriks tersebut memiliki ordo yang sama, yaitu 2 × 2, dan elemen-elemen yang sama, tetapi elemen-elemen yang bersesuaian tidaklah sama. Pilih elemen pada baris pertama dan kolom pertama, yaitu 1 pada matriks di ruas kiri, sedangkan pada matriks ruas kanan elemen tersebut adalah –3.
    </string>
    <string name="slide_belajar_kesamaan_matriks_4_title">Point B</string>
    <string name="slide_belajar_kesamaan_matriks_4_desc">
        Pernyataan pada poin B juga salah, karena ordo dari matriks-matriks tersebut tidaklah sama. Ordo dari matriks di ruas kiri adalah 3 × 2, sedangkan matriks di ruas kanan berordo 2 × 3.
    </string>
    <string name="slide_belajar_kesamaan_matriks_5_title">Point C</string>
    <string name="slide_belajar_kesamaan_matriks_5_desc">
        Pernyataan pada poin C adalah kondisional. Agar pernyataan tersebut bernilai benar, maka a – 2 = 1 (a = 3), 2b = 4 (b = 2), c = –2, dan akan salah jika tidak memenuhi salah satu (atau lebih) dari syarat tersebut.
    </string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_1_title">Pertambahan &amp; Pengurangan MATRIKS ?</string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_1_desc">
        Penjumlahan atau pengurangan matriks dapat ditentukan dengan mengoperasikan elemen-elemen yang bersesuian dari matriks yang dijumlahkan atau dikurangkan. Hal ini mengakibatkan, matriks-matriks yang dapat dijumlahkan atau dikurangkan adalah matriks-matriks yang memiliki ordo sama, sehingga setiap elemen dari matriks yang satu memiliki elemen yang bersesuaian dengan matriks yang lainnya.
    </string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_2_title">Empty</string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_2_desc">
        Penjumlahan dan Pengurangan Matriks\n
        Diberikan matriks-matriks A, B, C, dan D yang memiliki ordo sama.\n
        A + B = C dimana [aij + bij] = [cij],
        A – B = D dimana [aij – bij] = [dij].
    </string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_3_title">Contoh</string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_3_desc">
        Hitunglah penjumlahan dan pengurangan dari matriks-matriks berikut.\n
        1. A + C\n
        2. A + B\n
        3. C – A\n
    </string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_4_title">Pembahasan Point 1</string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_4_desc">
        1. A + C\n
        Matriks A dan matriks C memiliki ordo yang sama, yaitu 3 × 2. Sehingga kedua matriks tersebut dapat dilakukan operasi penjumlahan sebagai berikut.
    </string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_5_title">Pembahasan Point 2</string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_5_desc">
        2. A + B\n
        Karena matriks A dan B tidak memiliki ordo yang sama, maka operasi penjumlahan tidak dapat dilakukan pada kedua matriks tersebut.
    </string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_6_title">Pembahasan Point 3</string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_6_desc">
        3. C – A\n
        Pengurangan matriks C oleh A dapat dilakukan karena ordo dari kedua matriks tersebut sama. Berikut pengurangan dari kedua matriks tersebut.
    </string>
    <string name="slide_belajar_pertambahan_pengurangan_matriks_7_title">Kesimpulan</string>
</resources>