<?xml version="1.0" encoding="utf-8"?>
<!--

/*
 * Copyright 2017.  Aldan Rizki Santosa
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_belajar"
        android:icon="@drawable/ic_bottom_belajar"
        android:title="@string/belajar"/>

    <item
        android:id="@+id/navigation_latihan"
        android:icon="@drawable/ic_bottom_latihan"
        android:title="@string/latihan"/>

    <item
        android:id="@+id/navigation_kalkulator"
        android:icon="@drawable/ic_bottom_kalkulator"
        android:title="@string/kalkulator"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/title_profile" />

</menu>
