<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_black_light">

        <LinearLayout
            android:id="@+id/Layout_Calculator_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".Main">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/ordo_2_x_2"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/B1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/B11"
                    android:layout_width="0sp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_form_request"
                    android:ems="10"
                    android:hint="@string/b11"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center"
                    android:textColorHint="@color/color_grey_dark" />

                <EditText
                    android:id="@+id/B12"
                    android:layout_width="0sp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_form_request"
                    android:ems="10"
                    android:hint="@string/b12"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center"
                    android:textColorHint="@color/color_grey_dark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/B2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/B21"
                    android:layout_width="0sp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_form_request"
                    android:ems="10"
                    android:hint="@string/b11"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center"
                    android:textColorHint="@color/color_grey_dark" />

                <EditText
                    android:id="@+id/B22"
                    android:layout_width="0sp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_form_request"
                    android:ems="10"
                    android:hint="@string/b12"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center"
                    android:textColorHint="@color/color_grey_dark" />
            </LinearLayout>

            <Button
                android:id="@+id/Proses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_form_button_submit"
                android:text="Proses"
                android:textColor="@color/white" />

            <include
                android:id="@+id/menu_matriks"
                layout="@layout/menu_calculator_result_matriks"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include
                android:id="@+id/menu_minor"
                layout="@layout/menu_calculator_result_minor"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include
                android:id="@+id/menu_kalkulator"
                layout="@layout/menu_calculator_result_determinan"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>

